--- a/apicontact/build.gradle
+++ b/apicontact/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile('org.springframework.boot:spring-boot-starter')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('com.google.zxing:core:3.3.3')
 
 	compile('org.codehaus.groovy:groovy-all:2.4.9')
 	compile('org.projectlombok:lombok:1.16.14')
